--- a/app/src/main/res/layout/activity_classe_detail.xml
+++ b/app/src/main/res/layout/activity_classe_detail.xml
@@ -105,8 +105,9 @@
         android:layout_width="362dp"
         android:layout_height="168dp"
         android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="2dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
@@ -114,8 +115,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Liste élèves"
-        app:layout_constraintTop_toBottomOf="@+id/promotion_et"
-        tools:layout_editor_absoluteX="2dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/promotion_et" />
 
     <TextView
         android:id="@+id/textView2"
@@ -123,15 +124,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Liste matières"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewLstEle"
-        tools:layout_editor_absoluteX="4dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewLstEle" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewLstMat"
         android:layout_width="353dp"
         android:layout_height="196dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="4dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
