--- a/app/src/main/res/layout/activity_classe_list.xml
+++ b/app/src/main/res/layout/activity_classe_list.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/matiere_list_rv"
+        android:id="@+id/eleve_list_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_def"
