--- a/app/src/main/res/layout/activity_eleve_list.xml
+++ b/app/src/main/res/layout/activity_eleve_list.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/matiere_list_rv"
+        android:id="@+id/eleve_list_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_def"
@@ -29,7 +29,7 @@
         android:padding="@dimen/padding_def"
         app:layout_constraintBottom_toTopOf="@+id/ml_matiere_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ml_title_tv"
         app:layout_constraintVertical_bias="0.0" />
