--- a/app/src/main/res/layout/eleve_classe_list_item.xml
+++ b/app/src/main/res/layout/eleve_classe_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ecli_rl"
@@ -10,22 +10,14 @@
         android:id="@+id/ecli_intitule_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:text="@string/intitule_txt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_alignParentStart="true"
+        android:text="@string/intitule_txt" />
 
     <TextView
         android:id="@+id/ecli_promotion_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/promotion_txt"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.739"
-        app:layout_constraintStart_toEndOf="@+id/ecli_intitule_tv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="100dp"
+        android:text="@string/promotion_txt" />
+</RelativeLayout>
