--- a/app/src/main/res/layout/activity_eleve_edit.xml
+++ b/app/src/main/res/layout/activity_eleve_edit.xml
@@ -142,10 +142,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/valider_txt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.091"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eef_telephone_ctrl" />
+
+    <Button
+        android:id="@+id/eef_supprimer_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Supprimer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toEndOf="@+id/eef_valider_btn"
+        app:layout_constraintTop_toBottomOf="@+id/eef_telephone_ctrl"
+        tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eef_classes_rv"
@@ -155,4 +165,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eef_valider_btn" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
