--- a/app/src/main/res/layout/activity_classe_detail.xml
+++ b/app/src/main/res/layout/activity_classe_detail.xml
@@ -8,7 +8,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/textView_title"
+        android:id="@+id/classe_detail_title_tv"
         android:layout_width="279dp"
         android:layout_height="61dp"
         android:padding="10dp"
@@ -73,7 +73,7 @@
         app:srcCompat="@android:drawable/ic_input_delete" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/return_btn"
+        android:id="@+id/cef_retour_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -93,11 +93,11 @@
         android:clickable="true"
         android:contentDescription="ajout"
         app:backgroundTint="#FFA0A0"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewLstEle"
+        app:layout_constraintBottom_toBottomOf="@+id/eef_classes_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewLstEle"
+        app:layout_constraintTop_toTopOf="@+id/eef_classes_rv"
         app:layout_constraintVertical_bias="0.324"
         app:srcCompat="@android:drawable/ic_input_add" />
 
@@ -118,7 +118,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewLstEle"
+        android:id="@+id/eef_classes_rv"
         android:layout_width="319dp"
         android:layout_height="215dp"
         android:layout_marginTop="4dp"
@@ -149,7 +149,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewLstEle" />
+        app:layout_constraintTop_toBottomOf="@+id/eef_classes_rv" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
