--- a/app/src/main/res/layout/activity_eleve_add.xml
+++ b/app/src/main/res/layout/activity_eleve_add.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.eleves.EleveFormActivity">
+    tools:context=".activities.eleves.EleveAddActivity">
 
     <TextView
         android:id="@+id/eleve_form_tv"
@@ -27,12 +27,12 @@
         android:layout_marginTop="100dp"
         android:text="Nom : "
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/nom_et"
+        app:layout_constraintEnd_toStartOf="@+id/eaf_nom_ctrl"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eleve_form_tv" />
 
     <EditText
-        android:id="@+id/nom_et"
+        android:id="@+id/eaf_nom_ctrl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -51,12 +51,12 @@
         android:layout_marginTop="48dp"
         android:text="Prénom :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/prenom_et"
+        app:layout_constraintEnd_toStartOf="@+id/eaf_prenom_ctrl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nom_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_nom_ctrl" />
 
     <EditText
-        android:id="@+id/prenom_et"
+        android:id="@+id/eaf_prenom_ctrl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -65,7 +65,7 @@
         android:hint="Prénom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/prenom_tv"
-        app:layout_constraintTop_toBottomOf="@+id/nom_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_nom_ctrl" />
 
     <TextView
         android:id="@+id/date_naissance_tv"
@@ -75,12 +75,12 @@
         android:layout_marginTop="52dp"
         android:text="Date de naissance :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/date_naissance_et"
+        app:layout_constraintEnd_toStartOf="@+id/eaf_date_naissance_ctrl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/prenom_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_prenom_ctrl" />
 
     <EditText
-        android:id="@+id/date_naissance_et"
+        android:id="@+id/eaf_date_naissance_ctrl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -89,7 +89,7 @@
         android:hint="Date de naissance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/date_naissance_tv"
-        app:layout_constraintTop_toBottomOf="@+id/prenom_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_prenom_ctrl" />
 
     <TextView
         android:id="@+id/email_tv"
@@ -99,12 +99,12 @@
         android:layout_marginTop="48dp"
         android:text="Email :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/email_et"
+        app:layout_constraintEnd_toStartOf="@+id/eaf_email_ctrl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_naissance_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_date_naissance_ctrl" />
 
     <EditText
-        android:id="@+id/email_et"
+        android:id="@+id/eaf_email_ctrl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -113,7 +113,7 @@
         android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/email_tv"
-        app:layout_constraintTop_toBottomOf="@+id/date_naissance_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_date_naissance_ctrl" />
 
     <TextView
         android:id="@+id/telephone_tv"
@@ -123,12 +123,12 @@
         android:layout_marginTop="52dp"
         android:text="Téléphone :"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/telephone_et"
+        app:layout_constraintEnd_toStartOf="@+id/eaf_telephone_ctrl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_email_ctrl" />
 
     <EditText
-        android:id="@+id/telephone_et"
+        android:id="@+id/eaf_telephone_ctrl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -137,10 +137,10 @@
         android:hint="Téléphone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/telephone_tv"
-        app:layout_constraintTop_toBottomOf="@+id/email_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_email_ctrl" />
 
     <Button
-        android:id="@+id/create_btn"
+        android:id="@+id/eaf_valider_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -149,12 +149,12 @@
         android:backgroundTint="@color/cnam"
         android:text="Création"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/return_btn"
+        app:layout_constraintEnd_toStartOf="@+id/eaf_retour_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/telephone_et" />
+        app:layout_constraintTop_toBottomOf="@+id/eaf_telephone_ctrl" />
 
     <Button
-        android:id="@+id/return_btn"
+        android:id="@+id/eaf_retour_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -164,7 +164,7 @@
         android:text="Retour"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/create_btn"
-        app:layout_constraintTop_toBottomOf="@+id/telephone_et" />
+        app:layout_constraintStart_toEndOf="@+id/eaf_valider_btn"
+        app:layout_constraintTop_toBottomOf="@+id/eaf_telephone_ctrl" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
