--- a/app/src/main/res/layout/activity_eleve_list.xml
+++ b/app/src/main/res/layout/activity_eleve_list.xml
@@ -21,13 +21,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerView_list"
+        android:id="@+id/eleve_list_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_def"
         android:layout_marginBottom="@dimen/margin_def"
         android:padding="@dimen/padding_def"
-        app:layout_constraintBottom_toTopOf="@+id/button_matieres"
+        app:layout_constraintBottom_toTopOf="@+id/ml_matiere_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton_addItem"
+        android:id="@+id/ml_add_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -48,7 +48,7 @@
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <Button
-        android:id="@+id/button_matieres"
+        android:id="@+id/ml_matiere_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_def"
@@ -60,7 +60,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button_eleves"
+        android:id="@+id/ml_eleve_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_def"
@@ -69,10 +69,10 @@
         android:textSize="@dimen/textsize_def"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_matieres" />
+        app:layout_constraintStart_toEndOf="@+id/ml_matiere_btn" />
 
     <Button
-        android:id="@+id/button_classes"
+        android:id="@+id/ml_classe_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_def"
@@ -80,7 +80,7 @@
         android:text="@string/classe_tag"
         android:textSize="@dimen/textsize_def"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_matieres"
+        app:layout_constraintEnd_toStartOf="@+id/ml_matiere_btn"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
