--- a/app/src/main/res/layout/activity_matiere_detail.xml
+++ b/app/src/main/res/layout/activity_matiere_detail.xml
@@ -117,7 +117,7 @@
         app:layout_constraintVertical_bias="0.355" />
 
     <Button
-        android:id="@+id/return_btn"
+        android:id="@+id/eef_retour_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
