--- a/app/src/main/res/layout/activity_matiere_form.xml
+++ b/app/src/main/res/layout/activity_matiere_form.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/description_et" />
 
     <Button
-        android:id="@+id/create_btn"
+        android:id="@+id/eef_valider_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="129dp"
@@ -66,12 +66,12 @@
         android:backgroundTint="@color/cnam"
         android:text="Création"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/return_btn"
+        app:layout_constraintEnd_toStartOf="@+id/eef_retour_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/professeur_et" />
 
     <Button
-        android:id="@+id/return_btn"
+        android:id="@+id/eef_retour_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
